<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ViewAnimator
        android:id="@+id/fragment_edit_view_animator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollAttributes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f4faff"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#68a6d2"
                    android:paddingLeft="10dp"
                    android:paddingTop="8dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="8dp"
                    android:text="@string/attributes"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">

                    <Spinner
                        android:id="@+id/type_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_edittext_border_background"
                        android:gravity="center"
                        android:prompt="@string/type"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:targetApi="n" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
                        app:layout_constraintBottom_toBottomOf="@+id/type_spinner"
                        app:layout_constraintStart_toStartOf="@+id/type_spinner"
                        app:layout_constraintTop_toTopOf="@+id/type_spinner" />


                </androidx.constraintlayout.widget.ConstraintLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/custom_edittext_border_background"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/object_id_lbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"
                        android:text="@string/status"
                        android:textSize="@dimen/_14ssp" />

                    <TextView
                        android:id="@+id/object_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/null_"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/custom_edittext_border_background">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/mCodeEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:hint="@string/code_lbl"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/custom_edittext_border_background">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/device_num"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:hint="@string/device_no_lbl"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">

                    <Spinner
                        android:id="@+id/comment_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_edittext_border_background"
                        android:gravity="center"
                        android:prompt="@string/type"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:targetApi="n" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
                        app:layout_constraintBottom_toBottomOf="@+id/comment_spinner"
                        app:layout_constraintStart_toStartOf="@+id/comment_spinner"
                        app:layout_constraintTop_toTopOf="@+id/comment_spinner" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/list_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" />

                <TextView
                    android:id="@+id/tvAttachment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#68a6d2"
                    android:paddingLeft="10dp"
                    android:paddingTop="8dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="8dp"
                    android:text="@string/attachments"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/take_picture_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:src="@drawable/ic_add_a_photo_black_24dp"
                    tools:targetApi="lollipop" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/offline_attachments_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black">

            <com.jsibbold.zoomage.ZoomageView
                android:id="@+id/fragment_edit_zoom_iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter" />

            <ImageView
                android:id="@+id/fragment_edit_zoom_cancel_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_32sdp"
                android:src="@drawable/close_circle_outline"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Collector Preview"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@+id/fragment_edit_zoom_cancel_ic"
                app:layout_constraintEnd_toStartOf="@+id/fragment_edit_zoom_save_ic"
                app:layout_constraintStart_toEndOf="@+id/fragment_edit_zoom_cancel_ic"
                app:layout_constraintTop_toTopOf="@+id/fragment_edit_zoom_cancel_ic" />

            <ImageView
                android:id="@+id/fragment_edit_zoom_save_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_32sdp"
                android:src="@drawable/ic_done_white_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ViewAnimator>
</FrameLayout>